MiniJava.java
/* Generated By:JavaCC: Do not edit this line. MiniJava.java */
import syntaxtree.*;

public class MiniJava implements MiniJavaConstants {
    public static void main(String[] args) throws ParseException {
        MiniJava parser = new MiniJava(System.in);
        parser.Goal();
        System.out.println("Lexical analysis successful.");
    }

  static final public Program Goal() throws ParseException, ParseException {
    MainClass mainClass;
    ClassDeclList classDeclList = new ClassDeclList();
    ClassDecl classDecl;
    mainClass = MainClass();
    label_1:
    while (true) {
      if (jj_2_1(5)) {
        ;
      } else {
        break label_1;
      }
      classDecl = ClassDecl();
                                  classDeclList.addElement(classDecl);
    }
    jj_consume_token(0);
        {if (true) return new Program(mainClass, classDeclList);}
    throw new Error("Missing return statement in function");
  }

// MainClass: Represents the main class of the program.
// Contains the class name, main method parameter name, and the main method body
  static final public MainClass MainClass() throws ParseException {
    Identifier i1, i2;
    Statement s;
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    i2 = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
        {if (true) return new MainClass(i1, i2, s);}
    throw new Error("Missing return statement in function");
  }

// ClassDecl: Represents a class declaration.
// Can be either a simple class or a class that extends another class
  static final public ClassDecl ClassDecl() throws ParseException {
    Identifier i;
    Identifier j = null;
    VarDeclList vl = new VarDeclList();
    MethodDeclList ml = new MethodDeclList();
    jj_consume_token(CLASS);
    i = Identifier();
    if (jj_2_2(5)) {
      jj_consume_token(EXTENDS);
      j = Identifier();
    } else {
      ;
    }
    jj_consume_token(LBRACE);
    if (jj_2_3(5)) {
      vl = VarDeclList();
    } else {
      ;
    }
    if (jj_2_4(5)) {
      ml = MethodDeclList();
    } else {
      ;
    }
    jj_consume_token(RBRACE);
        if (j == null) {
            {if (true) return new ClassDeclSimple(i, vl, ml);}
        } else {
            {if (true) return new ClassDeclExtends(i, j, vl, ml);}
        }
    throw new Error("Missing return statement in function");
  }

// VarDeclList: Represents a list of variable declarations in a class or method.
// Collects all variable declarations into a list
  static final public VarDeclList VarDeclList() throws ParseException {
    VarDeclList vl = new VarDeclList();
    VarDecl v;
    label_2:
    while (true) {
      v = VarDecl();
                        vl.addElement(v);
      if (jj_2_5(5)) {
        ;
      } else {
        break label_2;
      }
    }
        {if (true) return vl;}
    throw new Error("Missing return statement in function");
  }

// VarDecl: Represents a single variable declaration.
// Contains the variable's type and identifier
  static final public VarDecl VarDecl() throws ParseException {
    Type t;
    Identifier i;
    t = Type();
    i = Identifier();
    jj_consume_token(SEMI);
        {if (true) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
  }

// MethodDeclList: Represents a list of method declarations in a class.
// Collects all method declarations into a list
  static final public MethodDeclList MethodDeclList() throws ParseException {
    MethodDeclList ml = new MethodDeclList();
    MethodDecl m;
    label_3:
    while (true) {
      m = MethodDecl();
                           ml.addElement(m);
      if (jj_2_6(5)) {
        ;
      } else {
        break label_3;
      }
    }
        {if (true) return ml;}
    throw new Error("Missing return statement in function");
  }

// MethodDecl: Represents a method declaration.
// Contains return type, method name, parameter list, local variables, statements, and return expression
  static final public MethodDecl MethodDecl() throws ParseException {
    Type t;
    Identifier i;
    FormalList fl;
    VarDeclList vl = new VarDeclList();
    StatementList sl = new StatementList();
    Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    i = Identifier();
    jj_consume_token(LPAREN);
    fl = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    if (jj_2_7(5)) {
      vl = VarDeclList();
    } else {
      ;
    }
    if (jj_2_8(5)) {
      sl = StatementList();
    } else {
      ;
    }
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(SEMI);
    jj_consume_token(RBRACE);
        {if (true) return new MethodDecl(t, i, fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
  }

// FormalList: Represents the parameter list of a method.
// Collects all formal parameters into a list
  static final public FormalList FormalList() throws ParseException {
    FormalList fl = new FormalList();
    Formal f;
    if (jj_2_10(5)) {
      f = Formal();
                       fl.addElement(f);
      label_4:
      while (true) {
        if (jj_2_9(5)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(COMMA);
        f = Formal();
                                   fl.addElement(f);
      }
    } else {
      ;
    }
        {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

// Formal: Represents a single formal parameter in a method declaration.
// Contains the parameter's type and identifier
  static final public Formal Formal() throws ParseException {
    Type t;
    Identifier i;
    t = Type();
    i = Identifier();
        {if (true) return new Formal(t, i);}
    throw new Error("Missing return statement in function");
  }

// Type: Represents a type in MiniJava.
// Can be int[], boolean, int, or a class type
  static final public Type Type() throws ParseException {
    Identifier i;
    if (jj_2_11(5)) {
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                                  {if (true) return new IntArrayType();}
    } else if (jj_2_12(5)) {
      jj_consume_token(BOOLEAN);
                  {if (true) return new BooleanType();}
    } else if (jj_2_13(5)) {
      jj_consume_token(INT);
              {if (true) return new IntegerType();}
    } else if (jj_2_14(5)) {
      i = Identifier();
                         {if (true) return new IdentifierType(i.toString());}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// StatementList: Represents a list of statements.
// Collects all statements into a list
  static final public StatementList StatementList() throws ParseException {
    StatementList sl = new StatementList();
    Statement s;
    label_5:
    while (true) {
      s = Statement();
                          sl.addElement(s);
      if (jj_2_15(5)) {
        ;
      } else {
        break label_5;
      }
    }
        {if (true) return sl;}
    throw new Error("Missing return statement in function");
  }

// Statement: Represents different types of statements in MiniJava.
// Handles blocks, if-else, while loops, print statements, assignments, and array assignments
  static final public Statement Statement() throws ParseException {
    StatementList sl = new StatementList();
    Statement s;
    Exp e1, e2, e3;
    Identifier i;
    Statement s1, s2;
    if (jj_2_17(5)) {
      jj_consume_token(LBRACE);
      label_6:
      while (true) {
        if (jj_2_16(5)) {
          ;
        } else {
          break label_6;
        }
        s = Statement();
                          sl.addElement(s);
      }
      jj_consume_token(RBRACE);
      {if (true) return new Block(sl);}
    } else if (jj_2_18(5)) {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
      jj_consume_token(ELSE);
      s2 = Statement();
      {if (true) return new If(e1, s1, s2);}
    } else if (jj_2_19(5)) {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
      {if (true) return new While(e1, s1);}
    } else if (jj_2_20(5)) {
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      e1 = Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMI);
      {if (true) return new Print(e1);}
    } else if (jj_2_21(5)) {
      i = Identifier();
      jj_consume_token(ASSIGN);
      e1 = Exp();
      jj_consume_token(SEMI);
      {if (true) return new Assign(i, e1);}
    } else if (jj_2_22(5)) {
      i = Identifier();
      jj_consume_token(LBRACKET);
      e1 = Exp();
      jj_consume_token(RBRACKET);
      jj_consume_token(ASSIGN);
      e2 = Exp();
      jj_consume_token(SEMI);
      {if (true) return new ArrayAssign(i, e1, e2);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// Exp: Represents expressions with AND operator.
// Handles logical AND operations between expressions
  static final public Exp Exp() throws ParseException {
    Exp e1, e2, e3;
    Identifier i;
    Type t;
    e1 = ExpAnd();
    label_7:
    while (true) {
      if (jj_2_23(5)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(AND);
      e2 = ExpAnd();
                              e1 = new And(e1, e2);
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// ExpAnd: Represents expressions with LESS operator.
// Handles less than comparisons between expressions
  static final public Exp ExpAnd() throws ParseException {
    Exp e1, e2;
    e1 = ExpLess();
    label_8:
    while (true) {
      if (jj_2_24(5)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(LESS);
      e2 = ExpLess();
                                e1 = new LessThan(e1, e2);
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// ExpLess: Represents expressions with addition and subtraction.
// Handles arithmetic addition and subtraction operations
  static final public Exp ExpLess() throws ParseException {
    Exp e1, e2;
    e1 = ExpPlus();
    label_9:
    while (true) {
      if (jj_2_25(5)) {
        ;
      } else {
        break label_9;
      }
      if (jj_2_26(5)) {
        jj_consume_token(ADD);
        e2 = ExpPlus();
                               e1 = new Plus(e1, e2);
      } else if (jj_2_27(5)) {
        jj_consume_token(SUB);
        e2 = ExpPlus();
                               e1 = new Minus(e1, e2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// ExpPlus: Represents expressions with multiplication and division.
// Handles arithmetic multiplication and division operations
  static final public Exp ExpPlus() throws ParseException {
    Exp e1, e2;
    e1 = ExpTimes();
    label_10:
    while (true) {
      if (jj_2_28(5)) {
        ;
      } else {
        break label_10;
      }
      if (jj_2_29(5)) {
        jj_consume_token(MULT);
        e2 = ExpTimes();
                                 e1 = new Times(e1, e2);
      } else if (jj_2_30(5)) {
        jj_consume_token(DIV);
        e2 = ExpTimes();
                                e1 = new Div(e1, e2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// ExpTimes: Represents expressions with array operations and method calls.
// Handles array length, method calls, and array lookups
  static final public Exp ExpTimes() throws ParseException {
    Exp e1, e2;
    Identifier i;
    ExpList el;
    e1 = ExpUnary();
    label_11:
    while (true) {
      if (jj_2_31(5)) {
        ;
      } else {
        break label_11;
      }
      if (jj_2_32(5)) {
        jj_consume_token(DOT);
        jj_consume_token(LENGTH);
                         e1 = new ArrayLength(e1);
      } else if (jj_2_33(5)) {
        jj_consume_token(DOT);
        i = Identifier();
        jj_consume_token(LPAREN);
        el = ExpList();
        jj_consume_token(RPAREN);
          e1 = new Call(e1, i, el);
      } else if (jj_2_34(5)) {
        jj_consume_token(LBRACKET);
        e2 = Exp();
        jj_consume_token(RBRACKET);
          e1 = new ArrayLookup(e1, e2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

// ExpUnary: Represents unary expressions and atomic expressions.
// Handles not operator, new array, new object, this, boolean literals, identifiers, and numbers
  static final public Exp ExpUnary() throws ParseException {
    Exp e;
    Identifier i;
    Type t;
    if (jj_2_35(5)) {
      jj_consume_token(NOT);
      e = ExpUnary();
                           {if (true) return new Not(e);}
    } else if (jj_2_36(5)) {
      jj_consume_token(NEW);
      jj_consume_token(INT);
      jj_consume_token(LBRACKET);
      e = Exp();
      jj_consume_token(RBRACKET);
                                                  {if (true) return new NewArray(e);}
    } else if (jj_2_37(5)) {
      jj_consume_token(NEW);
      i = Identifier();
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
                                               {if (true) return new NewObject(i);}
    } else if (jj_2_38(5)) {
      jj_consume_token(THIS);
             {if (true) return new This();}
    } else if (jj_2_39(5)) {
      jj_consume_token(TRUE);
             {if (true) return new True();}
    } else if (jj_2_40(5)) {
      jj_consume_token(FALSE);
              {if (true) return new False();}
    } else if (jj_2_41(5)) {
      i = Identifier();
                       {if (true) return new IdentifierExp(i.toString());}
    } else if (jj_2_42(5)) {
      jj_consume_token(NUM);
            {if (true) return new IntegerLiteral(Integer.parseInt(token.image));}
    } else if (jj_2_43(5)) {
      jj_consume_token(LPAREN);
      e = Exp();
      jj_consume_token(RPAREN);
                                  {if (true) return e;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

// ExpList: Represents a list of expressions.
// Used for method call arguments and array initializers
  static final public ExpList ExpList() throws ParseException {
    ExpList el = new ExpList();
    Exp e;
    if (jj_2_45(5)) {
      e = Exp();
                    el.addElement(e);
      label_12:
      while (true) {
        if (jj_2_44(5)) {
          ;
        } else {
          break label_12;
        }
        jj_consume_token(COMMA);
        e = Exp();
                                el.addElement(e);
      }
    } else {
      ;
    }
        {if (true) return el;}
    throw new Error("Missing return statement in function");
  }

// Identifier: Represents an identifier in the program.
// Creates an Identifier node from the token's image
  static final public Identifier Identifier() throws ParseException {
    Token t;
    t = jj_consume_token(IDENTIFIER);
        {if (true) return new Identifier(t.image);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
